--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 security.oauth2.resource.id=oauth2_id
+
+spring.social.facebook.appId=1646051088992138
+spring.social.facebook.appSecret=6544917f2a259732bbc21ef79b4e5cb8
+
+spring.social.linkedin.app-id=78ytxs21ps3lrz
+spring.social.linkedin.app-secret=8LEu0ocllfmUTowC
+
+spring.social.google.appId=7833040838-s8jenchg263sbq038jqvd9opqui6pj4m.apps.googleusercontent.com
+spring.social.google.appSecret=uvv-saIDZj3ZfjtlVIJb9PUw
