Revert to spring-boot V1.5.13

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.social.linkedin.app-secret=8LEu0ocllfmUTowC
 
 spring.social.google.appId=7833040838-s8jenchg263sbq038jqvd9opqui6pj4m.apps.googleusercontent.com
 spring.social.google.appSecret=uvv-saIDZj3ZfjtlVIJb9PUw
+
+server.port:8080
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+
+spring.social.auto-connection-views=false
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
