--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
@@ -32,9 +32,10 @@ ext {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-security')
-	compile('org.springframework.boot:spring-boot-configuration-processor')
+    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
 	compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-autoconfigure')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 
     compile('org.springframework.social:spring-social-core')
     compile('org.springframework.social:spring-social-config')
@@ -47,6 +48,13 @@ dependencies {
 	compile('org.springframework.security:spring-security-config')
 
     compile('org.apache.commons:commons-lang3:3.7')
+    compile('org.webjars:jquery:2.1.1')
+    compile('org.webjars:bootstrap:3.2.0')
+    compile('org.webjars:webjars-locator')
+    compile('org.webjars:font-awesome:4.7.0')
+    compile('cglib:cglib:3.1')
+    compile('org.hibernate:hibernate-validator')
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
 
 	runtime('org.springframework.boot:spring-boot-devtools')
 	runtime('com.h2database:h2')
